--- a/cli-chatbot-go/assets/config-example.yaml
+++ b/cli-chatbot-go/assets/config-example.yaml
@@ -1,5 +1,46 @@
+# CLI Chatbot Configuration
+# This file can be used to customize responses and behavior
+
+app:
+  name: "CLI Chatbot"
+  version: "1.0.0"
+  author: "Inspired by Claude Code & LazyVim"
+
+theme:
+  primary_color: "purple"
+  accent_color: "blue"
+  success_color: "green"
+  
 responses:
-  hello: "Hi there! How can I assist you today?"
-  help: "Available commands: hello, help, info, exit."
-  info: "This is a lightweight CLI chatbot inspired by Claude and LazyVim. Future updates will include AI integration!"
-  exit: "Exiting the chat..."
+  # Basic greetings
+  hello: "Hi there! 👋 How can I assist you today?"
+  hi: "Hello! Great to see you. What can I help you with?"
+  hey: "Hey! What's on your mind?"
+  
+  # Help and info
+  help: "Available commands: hello, help, info, time, joke, quote, clear, exit"
+  info: "This is a lightweight CLI chatbot inspired by Claude and LazyVim. Built with Go for speed and simplicity!"
+  
+  # Farewell messages
+  exit: "Thanks for chatting! See you next time. ✨"
+  bye: "Goodbye! Have a wonderful day! 👋"
+  goodbye: "Take care! Come back anytime!"
+  
+  # Gratitude
+  thanks: "You're very welcome! 😊"
+  thank_you: "Happy to help! Let me know if you need anything else."
+
+features:
+  typing_indicator: true
+  timestamps: true
+  colored_output: true
+  pattern_matching: true
+
+# Future enhancement: Add custom commands here
+custom_commands: []
+
+# Future enhancement: AI integration settings
+ai:
+  enabled: false
+  provider: "none"
+  model: "none"
